Launcher3: Add kill action to app shortcuts popup
Squashed:

Launcher3: Dismiss task from recents when killed

Change-Id: I25f37484a444346bf08e6960893892cc4bf25ada

Launcher3: Add FORCE_STOP_PACKAGES permission

Change-Id: I20dd0287c47269ccfdd02a8eae2a3da1de96e206

Launcher3: Update kill app button drawable

Change-Id: Iff78ae0528b8ed9c7b11952352e4b6d43507e233
Co-authored-by: Ali B <abittin@gmail.com>
Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Co-authored-by: Alexandru Scurtu <sasha.scurtu@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -128,4 +128,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s available | %2$s</string>
     
+    <!-- Force stop shortcut -->
+    <string name="recent_task_force_stop_app">Force stop</string>
+    <string name="recents_app_force_stopped">App force stopped</string>
 </resources>
