--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -118,4 +118,8 @@
     <string name="pref_scroll_vibration_title">Scroll Vibration</string>
     <string name="pref_scroll_vibration_summary">Haptic feedback while scrolling through recent apps, if supported</string>
 
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">Show hotseat background</string>
+    <string name="hotseat_bg_summary">Adds a translucent background to the app dock</string>
+
 </resources>
