--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -81,6 +81,13 @@
             android:defaultValue="true"
             android:persistent="true" />
 
+        <SwitchPreference
+            android:key="show_hotseat_bg"
+            android:title="@string/hotseat_bg_title"
+            android:summary="@string/hotseat_bg_summary"
+            android:defaultValue="true"
+            android:persistent="true"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
