--- a/quickstep/res/layout/overview_actions_container.xml
+++ b/quickstep/res/layout/overview_actions_container.xml
@@ -33,12 +33,13 @@
 
         <Button
             android:id="@+id/action_screenshot"
-            android:layout_width="60dp"
-            android:layout_height="48dp"
-            android:background="@drawable/recent_button_bg"
-            android:backgroundTint="@color/recent_button_bg_color"
-            android:foreground="@drawable/ic_screenshot"
-            android:foregroundGravity="center"/>
+            style="@style/OverviewActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_screenshot"
+            android:text="@string/action_screenshot"
+            android:theme="@style/ThemeControlHighlightWorkspaceColor"
+            android:visibility="gone" />
 
         <Space
             android:id="@+id/lens_space"
