ThemedIcon: Add toggle to use themed icons in App Drawer
Signed-off-by: tejasvp25 <tejasvp25@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -24,4 +24,10 @@
         android:defaultValue="true"
         android:persistent="true" />
 
+    <SwitchPreference
+        android:key="pref_drawer_theme"
+        android:title="@string/drawer_theme_title"
+        android:summary="@string/drawer_theme_summary"
+        android:defaultValue="false" />
+
 </androidx.preference.PreferenceScreen>
