Launcher3: Allow hiding top shadow on statusbar
On certain devices (especially amoled) with certain
black-themed wallpapers, it looks quite bad. Add a
toggle to disable it, inspired from lawnchair:

https://github.com/LawnchairLauncher/lawnchair/commit/c99e61205cc4d5b5d3d9b827787c9fd873616060
https://github.com/LawnchairLauncher/lawnchair/commit/e41e27a4d11e7f8352a3d2fa74afb04e8af9354a

Co-authored-by: Suphon Thanakornpakapong <paphonb@gmail.com>
Change-Id: I26e2fd8097d8b4855cbd2e433f7893fe240af6dd
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -68,4 +68,7 @@
     <string name="drawer_theme_title">Themed Icons inside drawer</string>
     <string name="drawer_theme_summary">Show themed icons inside app drawer</string>
 
+    <!-- Show top shadow -->
+    <string name="show_top_shadow">Show top shadow</string>
+
 </resources>
