--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -722,6 +722,7 @@
     <icon drawable="@drawable/browser" package="org.droidtr.jelly" />
     <icon drawable="@drawable/browser" package="org.lineageos.jelly" />
     <icon drawable="@drawable/browser" package="de.baumann.browser" />
+    <icon drawable="@drawable/browser" package="com.cookiegames.smartcookie" />
     <icon drawable="@drawable/gallery" package="com.android.gallery3d" />
     <icon drawable="@drawable/gallery" package="com.huawei.photos" />
     <icon drawable="@drawable/gallery" package="com.miui.gallery" />
