Launcher: Add toggle to disable scroll vibration
* It may leads to poor UX on devices don't have a good
  vibration motor

Change-Id: Ie1b3532f2aae00b90fd39ac8f6294c79b8bc67a5
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -113,4 +113,9 @@
     <!-- Recent Grid -->
     <string name="pref_allow_phone_overview_grid">Show grid of recent apps</string>
     <string name="pref_allow_phone_overview_grid_desc">More recent apps in overview</string>
+
+    <!-- Scroll Vibration -->
+    <string name="pref_scroll_vibration_title">Scroll Vibration</string>
+    <string name="pref_scroll_vibration_summary">Haptic feedback while scrolling through recent apps, if supported</string>
+
 </resources>
