--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -30,6 +30,7 @@
     <icon drawable="@drawable/caixa" package="br.com.gabba.Caixa" />
     <icon drawable="@drawable/calculator" package="com.google.android.calculator" />
     <icon drawable="@array/grayscale_calendar_icons" package="com.android.calendar" />
+    <icon drawable="@array/grayscale_calendar_icons" package="org.lineageos.etar" />
     <icon drawable="@drawable/camera" package="com.google.android.GoogleCamera" />
     <icon drawable="@drawable/camera" package="org.codeaurora.snapcam" />
     <icon drawable="@drawable/camera" package="com.google.android.GoogleCameraEng" />
