--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -122,4 +122,6 @@
     <string name="hotseat_bg_title">Show hotseat background</string>
     <string name="hotseat_bg_summary">Adds a translucent background to the app dock</string>
 
+    <!-- Row Height -->
+    <string name="row_height_title">Row height</string>
 </resources>
