--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -16,7 +16,8 @@
 -->
 <androidx.preference.PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:launcher="http://schemas.android.com/apk/res-auto">
+    xmlns:launcher="http://schemas.android.com/apk/res-auto"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.launcher3">
 
     <SwitchPreference
         android:key="pref_drawer_show_labels"
@@ -29,5 +30,14 @@
         android:title="@string/drawer_theme_title"
         android:summary="@string/drawer_theme_summary"
         android:defaultValue="false" />
+
+    <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+        android:key="pref_row_height"
+        android:title="@string/row_height_title"
+        android:persistent="true"
+        android:max="150"
+        android:min="75"
+        settings:units="%"
+        android:defaultValue="100" />
 
 </androidx.preference.PreferenceScreen>
