Add toggle to disable Search Bar in App drawer
Signed-off-by: tejasvp25 <tejasvp25@gmail.com>

--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -40,4 +40,10 @@
         settings:units="%"
         android:defaultValue="100" />
 
+    <SwitchPreference
+        android:key="pref_show_search_bar"
+        android:title="@string/search_bar_enabled_title"
+        android:summary="@string/search_bar_enabled_summary"
+        android:defaultValue="true" />
+
 </androidx.preference.PreferenceScreen>
