--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -75,4 +75,8 @@
     <string name="perf_dark_status_bar_title">Dark status bar</string>
     <string name="perf_dark_status_bar_summary">Use dark status bar on Home screen</string>
 
+    <!-- Search Bar Enabled -->
+    <string name="search_bar_enabled_title">Enable Search bar</string>
+    <string name="search_bar_enabled_summary">Show search bar in App Drawer</string>
+
 </resources>
