--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -126,5 +126,6 @@
     <string name="action_lens">Lens</string>
     
     <!-- Memory info -->
-    <string name="meminfo_text">%1$s Available | %2$s Total</string>
+    <string name="meminfo_text">%1$s available | %2$s</string>
+    
 </resources>
