Launcher3: Add pref to disable wallpaper scrolling
Ref:
https://github.com/LawnchairLauncher/lawnchair/commit/a969df9d3877aedcbfc0c5cdedc4b93b9b78048d

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -45,6 +45,13 @@
             android:summary="@string/pref_sleep_gesture_summary"
             android:defaultValue="true"
             android:persistent="true" />
+
+        <SwitchPreference
+            android:key="pref_allow_wallpaper_scrolling"
+            android:title="@string/allow_wallpaper_scrolling"
+            android:summary="@string/allow_wallpaper_scrolling_desc"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
