--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -124,4 +124,8 @@
 
     <!-- Row Height -->
     <string name="row_height_title">Row height</string>
+
+    <!-- Wallpaper scrolling -->
+    <string name="allow_wallpaper_scrolling">Wallpaper scrolling</string>
+    <string name="allow_wallpaper_scrolling_desc">Wallpaper scrolling effect for multiple screens</string>
 </resources>
