--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -131,4 +131,9 @@
     <!-- Force stop shortcut -->
     <string name="recent_task_force_stop_app">Force stop</string>
     <string name="recents_app_force_stopped">App force stopped</string>
+
+    <!-- Wallpaper zoom -->
+    <string name="enable_wallpaper_zoom_title">Enable wallpaper zooming</string>
+    <string name="enable_wallpaper_zoom_summary">Zoom in or out the wallpaper when using drawer or recent apps</string>
+
 </resources>
