--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -83,6 +83,12 @@
             android:persistent="true" />
 
         <SwitchPreference
+            android:key="pref_allow_wallpaper_zoom"
+            android:title="@string/enable_wallpaper_zoom_title"
+            android:summary="@string/enable_wallpaper_zoom_summary"
+            android:persistent="true" />
+
+        <SwitchPreference
             android:key="pref_show_top_shadow"
             android:title="@string/show_top_shadow"
             android:defaultValue="true"
